# papers

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  features.md  init-db.sql  middlewares.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: celery_app.py  dependencies.py  main.py
backend/app/api/: ai_features.py  annotations.py  chat.py  discovery.py  duplicates.py  export.py  groups.py  ingest.py  papers.py  relationships.py  search.py  statistics.py  tags.py  tasks.py
backend/app/core/: config.py  database.py  logger.py
backend/app/models/: __init__.py  annotation.py  bookmark.py  chat.py  discovery.py  duplicate_log.py  group.py  paper.py  paper_citation.py  reading_session.py  saved_search.py  tag.py
backend/app/schemas/: ai_features.py  annotation.py  chat.py  discovery.py  duplicate.py  export.py  group.py  paper.py  reading_progress.py  related.py  search.py  tag.py
backend/app/services/: ai_highlighter.py  ai_summarizer.py  base_ai_service.py  chat.py  citation_extractor.py  content_provider.py  duplicate_detection.py  embeddings.py  export_service.py  graph_service.py  ingestion.py  merge_service.py  paper_classifier.py  pdf_parser.py  reading_tracker.py  references.py  search_service.py  semantic_scholar.py  storage.py  task_status.py  url_parser.py
backend/app/tasks/: __init__.py  ai_tasks.py  base.py  paper_processing.py  search_tasks.py
backend/app/utils/: citation_extractor.py  json_extractor.py  text.py
backend/migrations/: env.py
extension/: .gitignore  (+11 more)
(+181 files in other folders)
